--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/course-location-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/course-location-window.zul
@@ -21,8 +21,8 @@
                 <column align="center" hflex="1"/>
             </columns>
 			<rows style="background: white;" >
-				<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-					<cell sclass="form-grid-cell" >
+				<row>
+					<cell>
 						<vbox hflex="1">
 							<label value="${c:l('txt.ui.common.name')}"/>
 							<textbox id="codeListItemName"
@@ -41,8 +41,8 @@
 						</vbox>
 					</cell>		
 				</row>
-				<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
-					<cell sclass="form-grid-cell" >
+				<row>
+					<cell>
 						<vbox hflex="1" vflex="1">
 							<label value="${c:l('txt.ui.common.description2')}"/>
 							<textbox id="codeListItemDescription"
