--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb-listbox.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb-listbox.zul
@@ -4,7 +4,7 @@
 	<custom-attributes coursePartic="${arg.coursePartic}" />
 	<custom-attributes course="${arg.course}" />
 	
-	<vbox hflex="20" pack="center" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.payments.vm.BankPaymentVM', selectMode=selectMode)">	
+	<div viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.payments.vm.BankPaymentVM', selectMode=selectMode)">	
 		<listbox model="@load(vm.transactionList)"
 			id="transactionList"
 			hflex="1"
@@ -14,26 +14,29 @@
 			checkmark="${selectMode}"
 			emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 			class="listbox" >
+			
 	        <auxhead>
 	            <auxheader class="header" colspan="4" >
-	            	<hbox hflex="1" height="42px" align="center" >
-		            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-	            			<hbox vflex="1" align="center" >
-	            				<label value="${c:l('txt.ui.menu.bankPayments')}" style="margin-right:5px;" />
-	            			</hbox>
-	            		</vbox>
-	            		<vbox hflex="min" vflex="1" align="end" pack="center" sclass="header-div" >
-	            			<hbox vflex="1" pack="center" align="center">
-	            				<button iconSclass="z-icon-check" onClick="@command('pairPaymentCmd', window=modalWindow, coursePartic=coursePartic, course=course)" disabled="@load(vm.transactionSelected eq null)" if="${selectMode}" sclass="btn-success" tooltiptext="OK" style="margin-right: 5px;"/>
-	            				<button label="${c:l('txt.ui.common.Stahnout')}" if="${!selectMode}" sclass="btn-warning" onClick="@command('reloadPaymentsCmd')" style="margin-right: 5px;"/>
-	            				<button label="${c:l('txt.ui.common.Zparovat')}" if="${!selectMode}" sclass="btn-warning" onClick="@command('pairPaymentsCmd')" style="margin-right: 5px; "/>
-	            				<!-- Rocnik -->
-	            				<include src="/pages/common/component/context-year.zul"/>
-	            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=transactionList)" if="${!selectMode}"  tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
-	           					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" if="${!selectMode}" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
-							</hbox>
-						</vbox>
-					</hbox>
+	            	<hlayout sclass="pull-left">
+	            		<button iconSclass="z-icon-check" onClick="@command('pairPaymentCmd', window=modalWindow, coursePartic=coursePartic, course=course)" disabled="@load(vm.transactionSelected eq null)" if="${selectMode}" sclass="btn-success" tooltiptext="OK" style="margin-right: 5px;"/>
+           				<button label="${c:l('txt.ui.common.Stahnout')}" if="${!selectMode}" sclass="btn-warning" onClick="@command('reloadPaymentsCmd')" style="margin-right: 5px;"/>
+           				<button label="${c:l('txt.ui.common.Zparovat')}" if="${!selectMode}" sclass="btn-warning" onClick="@command('pairPaymentsCmd')" style="margin-right: 5px; "/>
+	            	</hlayout>
+
+	            	<hlayout sclass="pull-right">
+	            		<!-- Rocnik -->
+           				<include src="/pages/common/component/context-year.zul"/>
+           				<button iconSclass="z-icon-download" 
+           					onClick="@command('exportToExcel',listbox=transactionList)" 
+           					if="${!selectMode}"  
+           					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+           					sclass="toolbar-btn"/>
+      					<button iconSclass="z-icon-refresh" 
+      						onClick="@command('refreshDataCmd')" 
+      						if="${!selectMode}" 
+      						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
+      						sclass="toolbar-btn"/>
+	            	</hlayout>
 	            </auxheader>
 	        </auxhead>
 	        
@@ -120,5 +123,5 @@
 	            </listitem>
 	        </template>
 	    </listbox>
-    </vbox>
+    </div>
 </zk>
