--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb.zul
@@ -3,28 +3,14 @@
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 
 <zk>
-	<div self="@{define(mainContent)}" hflex="1" >
+	<div self="@{define(mainContent)}" 
+			hflex="1" 
+			height="100%"
+			sclass="scb-view">
 		
-		<hlayout spacing="0" visible="false">
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center">
-				<headline label="${c:l('txt.ui.menu.bankPayments')}" menuSelected="menu_bankPaymentList" />
-			</vbox>
-			
-			<vbox hflex="1" />
-		</hlayout>
-		
-		<hlayout spacing="0">
-		
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center" style="margin-top: 20px;" >
-				<include src="/pages/secured/ADMIN/seznam-bankovnich-plateb-listbox.zul" selectMode="false" />		
-			</vbox>
-			
-			<vbox hflex="1" />
-			
-		</hlayout>
+		<vlayout>
+			<label value="${c:l('txt.ui.menu.bankPayments')}" sclass="scb-headline-big" />
+			<include src="/pages/secured/ADMIN/seznam-bankovnich-plateb-listbox.zul" selectMode="false" />		
+		</vlayout>
 	</div>
 </zk>
