--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-uzivatelu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-uzivatelu.zul
@@ -3,55 +3,49 @@
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 
 <zk>
-	<div self="@{define(mainContent)}" hflex="1" >
+	<div self="@{define(mainContent)}"
+			hflex="1" 
+			height="100%"
+			sclass="scb-view"
+			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.UserListVM')">
 		
-		<hlayout spacing="0" visible="false">
-			<vbox hflex="1" />
+		<vlayout>
+			<label value="${c:l('txt.ui.menu.users')}" sclass="scb-headline-big"/>
 			
-			<vbox hflex="20" pack="center">
-				<headline label="${c:l('txt.ui.menu.users')}" menuSelected="menu_userList" />
-			</vbox>
-			
-			<vbox hflex="1" />
-		</hlayout>
-		
-		<hlayout spacing="0">
-		
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center" 
-				viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.UserListVM')">
-				
 				<listbox model="@load(vm.userList)"
 					id="userList"
 					hflex="1"
-					style="margin-top: 20px;"
 					mold="paging"
 					pageSize="10"
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
+					
 			        <auxhead>
 			            <auxheader class="header" colspan="6" >
-			            	<hbox hflex="1" height="42px" align="center" >
-				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox vflex="1" align="center">
-			            				<label value="${c:l('txt.ui.menu.users')}" style="margin-right:5px;" />
-			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
-			            			</hbox>
-			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
-			            			<hbox>
-			            				<button label="Mail novým uživatelům" sclass="btn-warning" visible="@load(vm.allowSendMailToUsers)" onClick="@command('sendNewUserMailToAllUser')" />
-			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=userList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
-		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
-									</hbox>
-								</vbox>
-							</hbox>
+			            
+			            	<button onClick="@command('newItemCmd')" 
+											tooltiptext="${c:l('txt.ui.common.new')}" 
+											sclass="add-item-btn" 
+											iconSclass="z-icon-plus" />
+							
+							<hlayout sclass="pull-right">
+								<button label="Mail novým uživatelům" 
+									visible="@load(vm.allowSendMailToUsers)" 
+									onClick="@command('sendNewUserMailToAllUser')" />
+	            				<button iconSclass="z-icon-download" 
+	            					onClick="@command('exportToExcel',listbox=userList)" 
+	            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+	            					sclass="toolbar-btn"/>
+            					<button iconSclass="z-icon-refresh" 
+            						onClick="@command('refreshDataCmd')" 
+            						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
+            						sclass="toolbar-btn"/>
+							</hlayout>
 			            </auxheader>
 			        </auxhead>
 			        
 			        <!-- Filter -->
-					<auxhead height="37px">
+					<auxhead>
 						<auxheader class="filter">
 							<textbox hflex="1"
 								value="@bind(vm.filter.usernameName)"
@@ -62,13 +56,11 @@
 							<listbox selectedItem="@bind(vm.filter.roleItem)" 
 								model="@load(vm.roleListWithEmptyItem)"
 								onSelect="@command('filterDomCmd')"
-								sclass="form-input-text"
 								hflex="1"
-								height="24px"
 								mold="select" >
 								<template name="model">
 					               	<listitem label="@bind(each.label)" value="@bind(each)"/>
-					               </template>
+				               	</template>
 							</listbox>
 						</auxheader>
 						<auxheader class="filter">
@@ -99,7 +91,7 @@
 			            <listheader label="${c:l('txt.ui.common.firstname')}" align="left" sort="auto(contact.completeName)" />
 			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(contact.email1)" align="left"  />
 			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(contact.phone1)" align="left"  />
-			            <listheader width="50px" align="center" />
+			            <listheader width="90px" align="center" />
 			        </listhead>
 			         
 			        <template name="model">
@@ -120,10 +112,7 @@
 			            </listitem>
 			        </template>
 			    </listbox>
-			</vbox>
 			
-			<vbox hflex="1" />
-			
-		</hlayout>
+		</vlayout>
 	</div>
 </zk>
