--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -3,81 +3,57 @@
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 
 <zk>
-	<div self="@{define(mainContent)}" hflex="1" >
+	<div self="@{define(mainContent)}" 
+			hflex="1" 
+			height="100%"
+			sclass="scb-view" 
+			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationListVM')">
 		
-		<div sclass="breadcrumb" visible="false">
-			<span sclass="home-icon z-icon-home"/>
-	    	<a label="${c:l('txt.ui.menu.dashboard')}" href="/"/>
-			<label value="${c:l('txt.ui.menu.application')}"/>
-		</div>
-		
-		<hlayout spacing="0" visible="false">
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center">
-				<headline label="${c:l('txt.ui.common.participants')}" menuSelected="menu_courseParticipantList" />
-			</vbox>
-			
-			<vbox hflex="1" />
-		</hlayout>
-		
-		<hlayout spacing="0">
-		
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center"
-			 	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationListVM')">
+		<vlayout>
+			<label value="${c:l('txt.ui.common.participants')}" sclass="scb-headline-big"/>
 				
 				<listbox model="@load(vm.courseApplicationList)"
 					id="courseApplicationList"
 					hflex="1"
-					style="margin-top: 20px;"
 					mold="paging"
 					pageSize="10"
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
 			            <auxheader class="header" colspan="5" >
-			            	<hbox hflex="1" height="42px" align="center" >
-				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox>
-				            			<vbox>
-				            				<label value="${c:l('txt.ui.common.participants')}" />
-										</vbox>
-			            			</hbox>
-			            		</vbox>
-			            		<vbox vflex="1" pack="center" align="center" width="250px" sclass="header-div" >
-			            			<hbox vflex="1" pack="center" align="center">
-				            			<!-- Zpravy -->
-				            			<button label="${c:l('txt.ui.common.Messaging')}" 
-				            				iconSclass="z-icon-envelope"
-				            				popup="messagePopup, position=after_end"
-				            				visible="${vm.isLoggedUserInRole('ADMIN')}"
-				            				sclass="btn-warning"  />
-					                	<menupopup id="messagePopup" width="255px" >
-				            				<!-- Nova zprava zobrazenym ucastnikum. -->
-											<menuitem label="${c:l('txt.ui.common.NovaZprava')}" onClick="@command('openModalToSendEmailCmd')" />
-											<!-- Odeslani instrukci k platbe za prvni pololeti. -->
-											<menuitem label="${c:l('txt.ui.common.PaymentInstructionsFirstSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=true)" />
-											<!-- Odeslani instrukci k platbe za druhe pololeti. -->
-											<menuitem label="${c:l('txt.ui.common.PaymentInstructionsSecondSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=false)" />
-								       	</menupopup>
-									</hbox>
-			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
-			            			<hbox vflex="1" pack="center" align="center">	
-			            				<!-- Rocnik -->
-			            				<include src="/pages/common/component/context-year.zul"/>
-			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseApplicationList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
-		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
-									</hbox>
-								</vbox>
-							</hbox>
+			            	<hlayout sclass="pull-left">
+			            		<!-- Zpravy -->
+		            			<button label="${c:l('txt.ui.common.Messaging')}" 
+		            				iconSclass="z-icon-envelope"
+		            				popup="messagePopup, position=after_start"
+		            				visible="${vm.isLoggedUserInRole('ADMIN')}"/>
+			                	<menupopup id="messagePopup" width="355px" >
+		            				<!-- Nova zprava zobrazenym ucastnikum. -->
+									<menuitem label="${c:l('txt.ui.common.NovaZprava')}" onClick="@command('openModalToSendEmailCmd')" />
+									<!-- Odeslani instrukci k platbe za prvni pololeti. -->
+									<menuitem label="${c:l('txt.ui.common.PaymentInstructionsFirstSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=true)" />
+									<!-- Odeslani instrukci k platbe za druhe pololeti. -->
+									<menuitem label="${c:l('txt.ui.common.PaymentInstructionsSecondSemester')}" onClick="@command('sendPaymentInstructionCmd', firstSemester=false)" />
+						       	</menupopup>
+			            	</hlayout>
+			            	
+			            	<hlayout sclass="pull-right">
+			            		<!-- Rocnik -->
+	            				<include src="/pages/common/component/context-year.zul"/>
+	            				<button iconSclass="z-icon-download" 
+	            					onClick="@command('exportToExcel',listbox=courseApplicationList)" 
+	            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+	            					sclass="toolbar-btn"/>
+            					<button iconSclass="z-icon-refresh" 
+            						onClick="@command('refreshDataCmd')" 
+            						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
+            						sclass="toolbar-btn"/>
+			            	</hlayout>
 			            </auxheader>
 			        </auxhead>
 			        
 			        <!-- Filter -->
-					<auxhead height="37px">
+					<auxhead>
 						<auxheader class="filter">
 							<textbox hflex="1"
 								value="@bind(vm.filter.courseParticName)"
@@ -125,7 +101,7 @@
 			            <listheader label="${c:l('txt.ui.common.course')}" sort="auto(courseParticipant.inCourseInfo)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.paymentInstructionSent')}" align="center" hflex="min" />
 			            <listheader label="${c:l('txt.ui.common.payed')}" align="center" hflex="min" />
-			            <listheader width="50px" align="center" />
+			            <listheader width="90px" align="center" />
 			        </listhead>
 			         
 			        <template name="model">
@@ -254,10 +230,7 @@
 			            </listitem>
 			        </template>
 			    </listbox>
-			</vbox>
 			
-			<vbox hflex="1" />
-			
-		</hlayout>
+		</vlayout>
 	</div>
 </zk>
