--- a/scb-ui-zk/src/main/webapp/pages/secured/change-password-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/change-password-window.zul
@@ -32,9 +32,9 @@
 			<columns>
                 <column align="center" hflex="1"/>
             </columns>
-			<rows style="background: white;" >
-				<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-					<cell sclass="form-grid-cell" >
+			<rows>
+				<row>
+					<cell>
 						<vbox hflex="1">
 							<label value="${c:l('txt.ui.common.enterActualPassword')}"/>
 							<textbox id="actualPassword"
@@ -54,8 +54,8 @@
 					</cell>		
 				</row>
 				
-				<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-					<cell sclass="form-grid-cell" >
+				<row>
+					<cell>
 						<vbox hflex="1">
 							<label value="${c:l('txt.ui.common.enterNewPassword')}"/>
 							<textbox id="newPassword"
@@ -74,7 +74,7 @@
 					</cell>		
 				</row>
 				
-				<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
+				<row>
 					<cell sclass="form-grid-cell" >
 						<vbox hflex="1">
 							<label value="${c:l('txt.ui.common.enterAgainNewPassword')}"/>
