--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/kurz-vyuka.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/kurz-vyuka.zul
@@ -6,33 +6,24 @@
 <?component name="lesson-stats" macroURI="/pages/common/component/lesson-stats.zul"?>
 
 <zk>
-	<div self="@{define(mainContent)}" hflex="1" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseLearningLessonsVM')"
-			 validationMessages="@id('vmsgs')"
-       		 form="@id('fx') @load(vm) @save(vm, before='submit')" >
+	<div self="@{define(mainContent)}" 
+		hflex="1" 
+		height="100%"
+		sclass="scb-view" 
+		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseLearningLessonsVM')"
+		validationMessages="@id('vmsgs')"
+       	form="@id('fx') @load(vm) @save(vm, before='submit')" >
 		
-		<hlayout spacing="0">
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center" >
-				<hbox hflex="1" align="center" vflex="1" >
-					<vbox hflex="3">
-						<headline label="${vm.pageHeadline}" menuSelected="menu_courseList" />
-					</vbox>
-					<vbox hflex="1" vflex="1" align="end" pack="center">
-						<button onClick="@command('backCmd')" 
-							label="${c:l('txt.ui.common.Back')}" 
-							iconSclass="z-icon-arrow-left" />
-					</vbox>
-				</hbox>
-			</vbox>
-			
-			<vbox hflex="1" />
-		</hlayout>
 		
-		<hlayout spacing="0">
-			<vbox hflex="1" />
-				<!-- Formular -->
-				<vbox hflex="20" pack="center" sclass="vbox-content" >
+		<vlayout spacing="0">
+		
+			<hlayout>
+				<label value="${vm.pageHeadline}" sclass="scb-headline-big"/>
+				<button onClick="@command('backCmd')" 
+								label="${c:l('txt.ui.common.Back')}" 
+								iconSclass="z-icon-arrow-left" />
+			</hlayout>
+			
 					<tabbox id="tb" hflex="1">
 					    <tabs id="tabs">
 <!-- 					        selected="@load(vm.tabSelected eq 'LESSONS')" -->
@@ -61,7 +52,7 @@
 							            			<hbox vflex="1" align="center">
 							            				<button onClick="@command('previousMonthCmd')" 
 							            					tooltiptext="${c:l('txt.ui.common.previousMonth')}" 
-							            					sclass="btn-warning" 
+							            					sclass="square-btn" 
 							            					disabled="@load(vm.prevMonthBtnDisabled)"
 							            					iconSclass="z-icon-arrow-left" />
 							            				<vbox width="120px" align="center">
@@ -69,7 +60,7 @@
 							            				</vbox>
 							            				<button onClick="@command('nextMonthCmd')" 
 							            					tooltiptext="${c:l('txt.ui.common.nextMonth')}" 
-							            					sclass="btn-warning"
+							            					sclass="square-btn"
 							            					disabled="@load(vm.nextMonthBtnDisabled)" 
 							            					iconSclass="z-icon-arrow-right"/>
 							            			</hbox>
@@ -83,7 +74,7 @@
 							        	<listheader label="${c:l('txt.ui.common.date')}" align="left" sort="auto(lessonDate)" />
 										<listheader label="${c:l('txt.ui.common.time')}" align="left" />
 							            <listheader label="${c:l('txt.ui.common.lessonProcessed')}" align="center" />
-							            <listheader width="50px" align="center" />
+							            <listheader width="90px" align="center" />
 							        </listhead>
 							         
 							        <template name="model">
@@ -97,7 +88,10 @@
 							                <listcell iconSclass="z-icon-check-circle" style="color: #87B87F; font-size: large;" tooltiptext="${c:l('txt.ui.common.yes')}" visible="${each.uuid ne null}" />
 			                				<listcell visible="${each.uuid eq null}" />
 							                <listcell>
-							                	<button iconSclass="z-icon-pencil" onClick="@command('lessonDetailCmd', item=each)" hflex="min" width="20px" visible="@load(!each.inFuture)" />
+							                	<button iconSclass="z-icon-pencil" onClick="@command('lessonDetailCmd', item=each)" 
+							                		hflex="min" 
+							                		width="20px" 
+							                		visible="@load(!each.inFuture)" />
 							                </listcell>
 							            </listitem>
 							        </template>
@@ -149,34 +143,32 @@
 <!-- 											<cell sclass="season"> -->
 <!-- 												<label value="@load(each.learningLesson.lesson.dayOfWeek) @converter(vm.enumLabelConverter)" /> -->
 <!-- 											</cell> -->
-											<cell sclass="season">
-												<label
-													value="@load(each.learningLesson.lessonDate) @converter(vm.dateConverter)" />
-											</cell>
-											<cell sclass="month last">
-												<label
-													value="@load(each.learningLesson.timeFrom) @converter(vm.timeConverter)" />
-												-
-												<label
-													value="@load(each.learningLesson.timeTo) @converter(vm.timeConverter)" />
-											</cell>
-											<hbox children="@load(each.courseParticipantList)">
-												<template name="children">
-													<vbox vflex="1" align="center" width="80px">
-														<label value="@load(each.lessonAttendance ? 'Ano' : 'Ne')"
-															style="@load(each.lessonAttendance ? 'color:green;' : 'color:red;')" />		
-													</vbox>
-												</template>
-											</hbox>
-										</row>
-									</template>
-								</grid>
-					    	</tabpanel>
-						</tabpanels>
-					</tabbox>
-				</vbox>
-			<vbox hflex="1" />
-		</hlayout>
+									<cell sclass="season">
+										<label
+											value="@load(each.learningLesson.lessonDate) @converter(vm.dateConverter)" />
+									</cell>
+									<cell sclass="month last">
+										<label
+											value="@load(each.learningLesson.timeFrom) @converter(vm.timeConverter)" />
+										-
+										<label
+											value="@load(each.learningLesson.timeTo) @converter(vm.timeConverter)" />
+									</cell>
+									<hbox children="@load(each.courseParticipantList)">
+										<template name="children">
+											<vbox vflex="1" align="center" width="80px">
+												<label value="@load(each.lessonAttendance ? 'Ano' : 'Ne')"
+													style="@load(each.lessonAttendance ? 'color:green;' : 'color:red;')" />		
+											</vbox>
+										</template>
+									</hbox>
+								</row>
+							</template>
+						</grid>
+			    	</tabpanel>
+				</tabpanels>
+			</tabbox>
+		</vlayout>
 	</div>
 </zk>
 
