--- a/sportologic-web/css/style.css
+++ b/sportologic-web/css/style.css
@@ -1217,3 +1217,20 @@
 		.grid-demo .row.flush > div:last-child span {
 			border-radius: 0 4px 4px 0;
 		}
+
+	#app-logo {
+		font-family: 'Faster One' !important;
+		font-size: 25px;
+		text-align: center;
+		line-height: 27px;
+		width: 30px;
+		height: 30px;
+		border-radius: 3px;
+		display: inline-block;
+		vertical-align: middle;
+		border: solid 1px #20a8d8;
+		background-color: #20a8d8;
+		color: #fff;
+		position: relative;
+		top: -6px;
+	}
